@@ -47,8 +47,6 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
     /* Defunct legacy options that we have to accept to maintain backward compatibility */
     private static final String noServerOption = "--no-server";
 
-    private static final String nativeAccessOption = "--enable-native-access";
-
     DefaultOptionHandler(NativeImage nativeImage) {
         super(nativeImage);
     }
@@ -130,15 +128,6 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 args.poll();
                 nativeImage.addCustomJavaArgs("--enable-preview");
                 return true;
-            case nativeAccessOption:
-                args.poll();
-                String modules = args.poll();
-                if (modules == null) {
-                    NativeImage.showError(nativeAccessOption + moduleSetModifierOptionErrorMessage);
-                }
-                nativeImage.addEnableNativeAccess(modules);
-                nativeImage.addEnableNativeAccess("org.graalvm.nativeimage.foreign");
-                return true;
         }
 
         String singleArgClasspathPrefix = newStyleClasspathOptionName + "=";
@@ -210,15 +199,6 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
             }
             nativeImage.addLimitedModules(limitModulesArgs);
-            return true;
-        }
-        if (headArg.startsWith(nativeAccessOption + "=")) {
-            args.poll();
-            String nativeAccessModules = headArg.substring(nativeAccessOption.length() + 1);
-            if (nativeAccessModules.isEmpty()) {
-                NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
-            }
-            nativeImage.addCustomJavaArgs(headArg + ",org.graalvm.nativeimage.foreign");
             return true;
         }
         return false;
